observer/config/envoy.yaml
static_resources:
  listeners:
  - name: sidecar_cl2
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10003
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: sidecar_cl2
                  host_rewrite_literal: cl2m.example.come
          http_filters:
          - name: envoy.filters.http.router

  - name: sidecar_cl1
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10002
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: sidecar_cl1
                  host_rewrite_literal: cl1m.example.come
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: sidecar_cl2
    connect_timeout: 30s
    type: LOGICAL_DNS
    http2_protocol_options: {}
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: sidecar_cl2
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: cl2m.example.come
                  port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: /certs/fullchain.pem
              private_key:
                filename: /certs/privkey.pem
          alpn_protocols:
          - h2
          - http/1.1
        sni: cl2m.example.come

  - name: sidecar_cl1
    connect_timeout: 30s
    type: LOGICAL_DNS
    http2_protocol_options: {}
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: sidecar_cl1
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: cl1m.example.come
                  port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: /certs/fullchain.pem
              private_key:
                filename: /certs/privkey.pem
          alpn_protocols:
          - h2
          - http/1.1
        sni: cl1m.example.come
